Modify text list